--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Hanzi Counter</string>
     <string name="button_hide_hanzi_counter">Hide Hanzi Counter</string>
     <string name="button_show_hanzi_counter">Show Hanzi Counter</string>
+    <string name="write_screen_tag">Write Screen</string>
+    <string name="read_screen_tag">Read Screen</string>
 </resources>
