--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="button_show_hanzi_counter">Show Hanzi Counter</string>
     <string name="write_screen_tag">Write Screen</string>
     <string name="read_screen_tag">Read Screen</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="button_clear">Clear</string>
+    <string name="button_load_current_text">Load current text</string>
+    <string name="button_save">Save</string>
+    <string name="button_edit_text">Edit Text</string>
 </resources>
