Snackbar informing that text has been saved when editing text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="button_load_current_text">Load current text</string>
     <string name="button_save">Save</string>
     <string name="button_edit_text">Edit Text</string>
+    <string name="snackbar_text_saved">Text saved!</string>
 </resources>
